# polygen

./: .gitignore  Makefile  README.md  cabal.project  poly.rkt  polygen.cabal  stack.yaml
app/: Main.hs
doc/: MonoGen.hs  main.bib  main.lhs  main.tex  polygen.lhs
src/: polygen.lhs
