cabal-version:      2.4

name:               polygen
version:            0.1.0.1
description:        Please see the README on GitHub at <https://github.com/githubuser/polygen#readme>
homepage:           https://github.com/wenkokke/polygen#readme
bug-reports:        https://github.com/wenkokke/polygen/issues
author:             Wen Kokke
maintainer:         wen.kokke@ed.ac.uk
copyright:          2020 Wen Kokke
license:            Apache-2.0
build-type:         Simple
extra-source-files: README.md

source-repository head
  type: git
  location: https://github.com/wenkokke/polygen

library
    exposed-modules:     PolyGen
    hs-source-dirs:      doc
    build-depends:       base        >=4.7 && <5
                       , bifunctors  >=5.5 && <6
                       , mtl         >=2.2 && <3
                       , lazy-search ==0.1.3.0
                       , size-based  ==0.1.3.0
    default-language:    Haskell2010

executable polygen
    main-is:             main.hs
    hs-source-dirs:      app
    build-depends:       base        >=4.7 && <5
                       , polygen
    default-language:    Haskell2010
